--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>INICIO-CONSTRUDREAMS</title>
     <!-- CSS -->
     <link rel="stylesheet" href="CSS/style.css">
+    <!-- CSS BS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
@@ -22,97 +25,105 @@
 <body>
     <!-- Navegador -->
     <header>
-        <div class="row">
-            <a class="logo">
-                <img class="logo" src="img/logo.jpg" alt="logo">
-            </a>
-            <nav>
-                <ul class="nav__ul">
-                    <li class="nav__li">
-                        <a class="nav__a" href="index.html">Inicio</a>
-                    </li>
-                    <li class="nav__li">
-                        <a class="nav__a" href="html/servicios.html">Servicios</a>
-                    </li>
-                    <li class="nav__li">
-                        <a class="nav__a" href="html/casosExito.html">Casos de Exíto</a>
-                    </li>
-                    <li class="nav__li">
-                        <a class="nav__a" href="html/sobreNosotros.html">Sobre Nosotros</a>
-                    </li>
-                    <li class="nav__li">
-                        <a class="nav__a" href="html/contactanos.html">Contactanos</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+        <nav class="header navbar navbar-expand-lg shadow navbar-dark fixed-top menu p-2">
+            <div class="container-fluid">
+                <a class="navbar-brand " href="/"><img class="logo" src="img/logo.jpg" alt="logo" /></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav ">
+                        <li class="nav-item px-lg-2">
+                            <a class="nav__a text-decoration-none text-uppercase " aria-current="page"
+                                href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item px-lg-2">
+                            <a class=" nav__a text-decoration-none text-uppercase "
+                                href="html/servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item px-lg-2 ">
+                            <a class=" nav__a text-decoration-none text-uppercase " href="html/casosExito.html">Casos de
+                                Exíto</a>
+                        </li>
+                        <li class="nav-item px-lg-2 ">
+                            <a class=" nav__a text-decoration-none text-uppercase " href="html/sobreNosotros.html">Sobre
+                                Nosotros</a>
+                        </li>
+                        <li class="nav-item px-lg-3 ">
+                            <a class=" nav__a text-decoration-none text-uppercase "
+                                href="html/contactanos.html">Contactanos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
     <main>
         <!-- Presentación -->
         <aside>
-            <div class="baner" style="background-image: url(img/Fondoinicio.jpg);">
-
-                <h1 class="baner__h1">Hacemos realidad tus proyectos de contrucción</h1>
-                <h5 class="baner__h5">
+            <div class="hero-image col-12 px-0">
+                <h1 class="text-center text-white fw-bold banner__h1">Hacemos realidad tus proyectos de contrucción
+                </h1>
+                <h5 class="text-center fw-light fs-2 baner__h5">
                     Servicios para toda Colombia
                 </h5>
             </div>
         </aside>
         <!-- Servicios -->
-        <section class="container  ">
-            <h3 class=" item__h3">
+        <section class="container-fluid">
+            <h3 class=" text-center fs-2 fw-bold p-lg-5">
                 NUESTROS SERVICIOS
             </h3>
-            <div class="grid__container ">
-                <div class="item__li">
+            <div class="row text-center">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
                     <span id="icion1">
                         <img class="item__img" src="img/icono1.png">
                     </span>
-                    <h5 class="baner__h5">Planeación</h5>
+                    <h5 class="baner__h5 mt-5 mb-5 fw-bold">Planeación</h5>
                 </div>
-                <div class="  item__li">
-                    <span id="icion2">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                    <span id=" icion2">
                         <img class="item__img" src="img/icono2.png">
                     </span>
-                    <h5 class=" baner__h5">Contrucción</h5>
+                    <h5 class=" baner__h5 mt-5 mb-5 fw-bold">Contrucción</h5>
                 </div>
-                <div class="item__li">
-                    <span id="icion3">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                    <span id=" icion3">
                         <img class="item__img" src="img/icono3.png">
                     </span>
-                    <h5 class="baner__h5">Diseño de Edificios</h5>
+                    <h5 class="baner__h5 mt-5 mb-5 fw-bold">Diseño de Edificios</h5>
                 </div>
-                <div class="item__li">
-                    <span id="icion4">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                    <span id=" icion4">
                         <img class="item__img" src="img/icono4.png">
                     </span>
-                    <h5 class=" baner__h5">Levantamos </h5>
-                    <h5 class=" baner__h5"> requerimientos</h5>
+                    <h5 class=" baner__h5 mt-5 mb-5  fw-bold">Levantamos requerimientos</h5>
                 </div>
-                <div class=" item__li">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
                     <span id="icion5">
                         <img class="item__img" src="img/icono5.png">
                     </span>
-                    <h5 class="baner__h5">Ubicación</h5>
+                    <h5 class="baner__h5 mt-5 m-5 fw-bold">Ubicación</h5>
                 </div>
-                <div class=" item__li">
-                    <span id="icion6">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                    <span id=" icion6">
                         <img class="item__img" src="img/icono6.png">
                     </span>
-                    <h5 class=" baner__h5">Mano de Obra</h5>
+                    <h5 class=" baner__h5 mt-5 mb-5 fw-bold">Mano de Obra</h5>
                 </div>
             </div>
         </section>
         <!-- Casos de Exito -->
-        <section class="container">
+        <section class="container-fluid">
             <div class=" informacion ">
-                <h3 class=" item__h3">CASOS DE EXITO</h3>
-                <div class="row">
-                    <div class="col">
+                <h3 class="text-center fw-bold p-lg-5 ">CASOS DE EXITO</h3>
+                <div class="row align-items-center mb-5">
+                    <div class="col-xs-12 col-sm-6 col-md-6">
                         <div class="informacion__h4">
                             <h4>Sed ut perspiciatis unde omnis</h4>
                         </div>
-                        <div class="informacion__p">
+                        <div class="pt-3">
                             <p>
                                 Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
                                 odit aut fugit, sed quia
@@ -120,20 +131,18 @@
                                 nesciunt. Neque porro
                                 quisquam est, qui dolorem.
                             </p>
-
                         </div>
                     </div>
-                    <div class="col">
-                        <img class="informacion__img" src="img/prueba.png">
+                    <div class="col-xs-12 col-sm-6 col-md-6">
+                        <img class="informacion__img" src="img/caso3.jpg">
                     </div>
-
                 </div>
-                <div class="row row__reverse">
-                    <div class="col">
+                <div class="row align-items-center flex-column-reverse flex-lg-row">
+                    <div class="col-xs-12 col-sm-6 col-md-6">
                         <div class="informacion__h4">
                             <h4>Sed ut perspiciatis unde omnis</h4>
                         </div>
-                        <div class="informacion__p">
+                        <div class="pt-3">
                             <p>
                                 Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
                                 odit aut fugit, sed quia
@@ -144,7 +153,7 @@
 
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-xs-12 col-sm-6 col-md-6 ">
                         <img class="informacion__img" src="img/prueba.png">
                     </div>
 
@@ -163,6 +172,10 @@
         </ul>
         <p class=" footer footer__ul footer__p">©2021. We love our users!</p>
     </footer>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
