--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <body>
     <!-- Navegador -->
     <header>
+
         <nav class="header navbar navbar-expand-lg shadow navbar-dark fixed-top menu p-2">
             <div class="container-fluid">
                 <a class="navbar-brand " href="/"><img class="logo" src="img/logo.jpg" alt="logo" /></a>
@@ -72,7 +73,7 @@
         </aside>
         <!-- Servicios -->
         <section class="container-fluid">
-            <h3 class=" text-center fs-2 fw-bold p-lg-5">
+            <h3 class=" text-center fs-2 fw-bold p-5">
                 NUESTROS SERVICIOS
             </h3>
             <div class="row text-center">
@@ -116,12 +117,12 @@
         </section>
         <!-- Casos de Exito -->
         <section class="container-fluid">
-            <div class=" informacion ">
-                <h3 class="text-center fw-bold p-lg-5 ">CASOS DE EXITO</h3>
+            <div>
+                <h3 class="text-center fw-bold p-5 ">CASOS DE EXITO</h3>
                 <div class="row align-items-center mb-5">
-                    <div class="col-xs-12 col-sm-6 col-md-6">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <div class="informacion__h4">
-                            <h4>Sed ut perspiciatis unde omnis</h4>
+                            <h4>Fincas</h4>
                         </div>
                         <div class="pt-3">
                             <p>
@@ -133,16 +134,16 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-6">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <img class="informacion__img" src="img/caso3.jpg">
                     </div>
                 </div>
-                <div class="row align-items-center flex-column-reverse flex-lg-row">
-                    <div class="col-xs-12 col-sm-6 col-md-6">
-                        <div class="informacion__h4">
-                            <h4>Sed ut perspiciatis unde omnis</h4>
+                <div class=" row d-flex flex-row-reverse align-items-center  mb-5">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
+                        <div class="informacion__h4 px-5">
+                            <h4>Casas</h4>
                         </div>
-                        <div class="pt-3">
+                        <div class="pt-3 px-5">
                             <p>
                                 Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
                                 odit aut fugit, sed quia
@@ -153,24 +154,24 @@
 
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-6 ">
-                        <img class="informacion__img" src="img/prueba.png">
+                    <div class="col-xs-12 col-sm-12 col-md-6 ">
+                        <img class="informacion__img" src="img/caso2.jpg">
                     </div>
 
                 </div>
         </section>
     </main>
     <!-- Footer -->
-    <footer class=" footer">
-        <h3 class=" footer item__h3 footer__h3">
+    <footer class="row footer">
+        <h3 class=" text-center footer__h3">
             Nuestras Redes
         </h3>
-        <ul class="  footer__ul">
-            <li class="footer__li"><i class="fab fa-instagram"></i></li>
-            <li class="footer__li"><i class="fab fa-facebook"></i></li>
-            <li class="footer__li"><i class="far fa-envelope"></i></li>
+        <ul class="row text-center text-decoration-none list-unstyled">
+            <li class=" col-4  footer__li"><i class="fab fa-instagram"></i></li>
+            <li class=" col-4  footer__li"><i class="fab fa-facebook"></i></li>
+            <li class=" col-4  footer__li "><i class="far fa-envelope"></i></li>
         </ul>
-        <p class=" footer footer__ul footer__p">©2021. We love our users!</p>
+        <p class=" footer text-center text-white">©2021. We love our users!</p>
     </footer>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
