--- a/html/casosExito.html
+++ b/html/casosExito.html
@@ -9,6 +9,9 @@
     <title>CASOS DE EXÍTO-CONSTRUDREAMS</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../CSS/style.css">
+    <!-- CSS BS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
@@ -22,91 +25,102 @@
 <body>
     <!-- Navegador -->
     <header>
-        <div class="row">
-            <a class="logo">
-                <img class="logo" src="../img/logo.jpg" alt="logo">
-            </a>
-            <nav>
-                <ul class="nav__ul">
-                    <li class="nav__li">
-                        <a class="nav__a" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav__li">
-                        <a class="nav__a" href="servicios.html">Servicios</a>
-                    </li>
-                    <li class="nav__li">
-                        <a class="nav__a" href="casosExito.html">Casos de Exíto</a>
-                    </li>
-                    <li class="nav__li">
-                        <a class="nav__a" href="sobreNosotros.html">Sobre Nosotros</a>
-                    </li>
-                    <li class="nav__li">
-                        <a class="nav__a" href="contactanos.html">Contactanos</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+        <nav class="header navbar navbar-expand-lg shadow navbar-dark fixed-top menu p-2">
+            <div class="container-fluid">
+                <a class="navbar-brand " href="/"><img class="logo" src="../img/logo.jpg" alt="logo" /></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav ">
+                        <li class="nav-item px-lg-2">
+                            <a class="nav__a text-decoration-none text-uppercase " aria-current="page"
+                                href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item px-lg-2">
+                            <a class=" nav__a text-decoration-none text-uppercase " href="servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item px-lg-2 ">
+                            <a class=" nav__a text-decoration-none text-uppercase " href="casosExito.html">Casos de
+                                Exíto</a>
+                        </li>
+                        <li class="nav-item px-lg-2 ">
+                            <a class=" nav__a text-decoration-none text-uppercase " href="sobreNosotros.html">Sobre
+                                Nosotros</a>
+                        </li>
+                        <li class="nav-item px-lg-3 ">
+                            <a class=" nav__a text-decoration-none text-uppercase "
+                                href="contactanos.html">Contactanos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
     <main>
         <!-- Casos de Exito -->
-        <section Class="container">
+        <section class="container">
             <!-- Titulo de Casos de Exito -->
-            <h1 class="title">Casos de Exíto</h1>
+            <div class="text-center fs-2 fw-bold pb-5">
+                <h1 class="title">Casos de Exíto</h1>
+            </div>
+
             <!-- Informacion Especifica de Casos  -->
-            <div class="informacion">
-                <article class="row">
-                    <div class="col">
+            <div class="container-fluid">
+                <article class="row align-items-center mb-5">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <h4 class="informacion__h4">Condominios</h4>
-                        <p class="informacion__p">
+                        <p class="pt-3">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur ipsum recusandae
                             sapiente
                             similique. Tempore tenetur labore officia atque porro consequatur alias aperiam? Saepe
                             dignissimos dolores, amet ut ullam autem ipsum.
                         </p>
                     </div>
-                    <div class="col">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <img class="informacion__img" src="../img/caso1.jpg" alt="Condominios">
                     </div>
                 </article>
-                <article class="row row__reverse">
-                    <div class="col">
+                <article class="row d-flex flex-row-reverse align-items-center mb-5">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <h4 class="informacion__h4">Casas</h4>
-                        <p class="informacion__p">
+                        <p class="p-3">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur ipsum recusandae
                             sapiente
                             similique. Tempore tenetur labore officia atque porro consequatur alias aperiam? Saepe
                             dignissimos dolores, amet ut ullam autem ipsum.
                         </p>
                     </div>
-                    <div class="col">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <img class="informacion__img" src="../img/caso2.jpg" alt="Casas">
                     </div>
                 </article>
-                <article class="row">
-                    <div class="col">
+                <article class="row align-items-center mb-5">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <h4 class="informacion__h4">Fincas</h4>
-                        <p class="informacion__p">
+                        <p class="p-3 ">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur ipsum recusandae
                             sapiente
                             similique. Tempore tenetur labore officia atque porro consequatur alias aperiam? Saepe
                             dignissimos dolores, amet ut ullam autem ipsum.
                         </p>
                     </div>
-                    <div class="col">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <img class="informacion__img" src="../img/caso3.jpg" alt="Fincas">
                     </div>
                 </article>
-                <article class="row row__reverse">
-                    <div class="col">
+                <article class="row d-flex flex-row-reverse align-items-center mb-5">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <h4 class="informacion__h4">Apartementos</h4>
-                        <p class="informacion__p">
+                        <p class="pt-3">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur ipsum recusandae
                             sapiente
                             similique. Tempore tenetur labore officia atque porro consequatur alias aperiam? Saepe
                             dignissimos dolores, amet ut ullam autem ipsum.
                         </p>
                     </div>
-                    <div class="col">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <img class="informacion__img" src="../img/caso4.jpg" alt="apartamento" />
                     </div>
                 </article>
@@ -115,16 +129,20 @@
     </main>
 
     <!-- Footer -->
-    <footer class=" footer">
-        <h3 class=" footer item__h3 footer__h3">
+    <footer class="row footer">
+        <h3 class=" text-center footer__h3">
             Nuestras Redes
         </h3>
-        <ul class="  footer__ul">
-            <li class="footer__li"><i class="fab fa-instagram"></i></li>
-            <li class="footer__li"><i class="fab fa-facebook"></i></li>
-            <li class="footer__li"><i class="far fa-envelope"></i></li>
+        <ul class="row text-center text-decoration-none list-unstyled">
+            <li class=" col-4  footer__li"><i class="fab fa-instagram"></i></li>
+            <li class=" col-4  footer__li"><i class="fab fa-facebook"></i></li>
+            <li class=" col-4  footer__li "><i class="far fa-envelope"></i></li>
         </ul>
-        <p class=" footer footer__ul footer__p">©2021. We love our users!</p>
+        <p class=" footer text-center text-white">©2021. We love our users!</p>
     </footer>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 
 </html>
