--- a/html/contactanos.html
+++ b/html/contactanos.html
@@ -9,6 +9,9 @@
     <title>CONTACTO-CONSTRUDREAMS</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../CSS/style.css">
+    <!-- CSS BS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
@@ -22,88 +25,108 @@
 <body>
     <!-- Navegador -->
     <header>
-        <div class="row">
-            <a class="logo">
-                <img class="logo" src="../img/logo.jpg" alt="logo">
-            </a>
-            <nav>
-                <ul class="nav__ul">
-                    <li class="nav__li">
-                        <a class="nav__a" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav__li">
-                        <a class="nav__a" href="servicios.html">Servicios</a>
-                    </li>
-                    <li class="nav__li">
-                        <a class="nav__a" href="casosExito.html">Casos de Exíto</a>
-                    </li>
-                    <li class="nav__li">
-                        <a class="nav__a" href="sobreNosotros.html">Sobre Nosotros</a>
-                    </li>
-                    <li class="nav__li">
-                        <a class="nav__a" href="contactanos.html">Contactanos</a>
-                    </li>
-                </ul>
+        <header>
+            <nav class="header navbar navbar-expand-lg shadow navbar-dark fixed-top menu p-2">
+                <div class="container-fluid">
+                    <a class="navbar-brand " href="/"><img class="logo" src="../img/logo.jpg" alt="logo" /></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                        <ul class="navbar-nav ">
+                            <li class="nav-item px-lg-2">
+                                <a class="nav__a text-decoration-none text-uppercase " aria-current="page"
+                                    href="../index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item px-lg-2">
+                                <a class=" nav__a text-decoration-none text-uppercase "
+                                    href="servicios.html">Servicios</a>
+                            </li>
+                            <li class="nav-item px-lg-2 ">
+                                <a class=" nav__a text-decoration-none text-uppercase " href="casosExito.html">Casos de
+                                    Exíto</a>
+                            </li>
+                            <li class="nav-item px-lg-2 ">
+                                <a class=" nav__a text-decoration-none text-uppercase " href="sobreNosotros.html">Sobre
+                                    Nosotros</a>
+                            </li>
+                            <li class="nav-item px-lg-3 ">
+                                <a class=" nav__a text-decoration-none text-uppercase "
+                                    href="contactanos.html">Contactanos</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </nav>
-        </div>
-    </header>
-    <main>
-        <!-- Contacto -->
-        <section class="container">
-            <!-- Titulo de Contacto -->
-            <h1 class="title">Contacto</h1>
-            <!-- Formulario de Contatco  -->
-            <form class="form" action="">
-                <label for="nombre">Nombre:</label>
-                <br />
-                <input class="form__input" type="text" name="nombre" placeholder="Escribe tu nombre ..." required />
-                <br />
-                <label for="apellido">Apellido:</label>
-                <br />
-                <input class="form__input" type="text" name="apellido" placeholder="Escribe tu apellido..." required />
-                <br />
-                <label for="email">Email:</label>
-                <br />
-                <input class="form__input" type="email" name="email" placeholder="Escribe tu email..." required />
-                <br />
-                <label for="">Servicios:</label>
-                </br>
-                <select class="form__select" name="servicios">
-                    <option value="0">Seleccione un servicio</option>
-                    <option value="1">Planeación</option>
-                    <option value="2">Contrucción</option>
-                    <option value="3">Diseño de Edificios</option>
-                    <option value="4">Levantamiento de Requistos</option>
-                    <option value="5">Ubicación </option>
-                    <option value="6">Mano de Obra</option>
-                </select>
-                <br />
-                <label for="mensaje">Mesaje:</label>
-                <br />
-                <textarea class="form__input form__mensaje " name="mensaje" rows="10" cols="75"></textarea>
-                <br />
-                <input class="form__check" type="checkbox" name="terminos" value="1" required />
-                <label>¿Acepta la politica de privacidad de Contrudreams, asi como los terminos y
-                    condiciones?</label>
-                <br />
+        </header>
+        <main>
+            <!-- Contacto -->
+            <section class="container">
+                <!-- Titulo de Contacto -->
+                <div class="text-center fs-2 fw-bold pb-5">
+                    <h1 class="title">Contacto</h1>
+                </div>
+                <!-- Formulario de Contatco  -->
+                <form class="form" action="">
+                    <label for="nombre">Nombre:</label>
+                    <br />
+                    <input class="form__input col-10 mb-3" type="text" name="nombre" placeholder="Escribe tu nombre ..."
+                        required />
+                    <br />
+                    <label for="apellido">Apellido:</label>
+                    <br />
+                    <input class="form__input col-10 mb-3" type="text" name="apellido"
+                        placeholder="Escribe tu apellido..." required />
+                    <br />
+                    <label for="email">Email:</label>
+                    <br />
+                    <input class="form__input col-10 mb-3" type="email" name="email" placeholder="Escribe tu email..."
+                        required />
+                    <br />
+                    <label for="">Servicios:</label>
+                    </br>
+                    <select class="form__select col-10" name="servicios">
+                        <option selected>Seleccione un servicio</option>
+                        <option value="1">Planeación</option>
+                        <option value="2">Contrucción</option>
+                        <option value="3">Diseño de Edificios</option>
+                        <option value="4">Levantamiento de Requistos</option>
+                        <option value="5">Ubicación </option>
+                        <option value="6">Mano de Obra</option>
+                    </select>
+                    <br />
+                    <label for="mensaje ">Mesaje:</label>
+                    <br />
+                    <textarea class="form__input form__mensaje col-10 mb-3" name="mensaje" rows="10"
+                        cols="75"></textarea>
+                    <br />
+                    <input class="form__check mb-3" type="checkbox" name="terminos" value="1" required />
+                    <label>¿Acepta la politica de privacidad de Contrudreams, asi como los terminos y
+                        condiciones?</label>
+                    <br />
 
-                <input class="form__btn" type="submit" value="Enviar">
-            </form>
-        </section>
-    </main>
+                    <input class="form__btn" type="submit" value="Enviar">
+                </form>
+            </section>
+        </main>
 
-    <!-- Footer -->
-    <footer class=" footer">
-        <h3 class=" footer item__h3 footer__h3">
-            Nuestras Redes
-        </h3>
-        <ul class="  footer__ul">
-            <li class="footer__li"><i class="fab fa-instagram"></i></li>
-            <li class="footer__li"><i class="fab fa-facebook"></i></li>
-            <li class="footer__li"><i class="far fa-envelope"></i></li>
-        </ul>
-        <p class=" footer footer__ul footer__p">©2021. We love our users!</p>
-    </footer>
+        <!-- Footer -->
+        <footer class="row footer">
+            <h3 class=" text-center footer__h3">
+                Nuestras Redes
+            </h3>
+            <ul class="row text-center text-decoration-none list-unstyled">
+                <li class=" col-4  footer__li"><i class="fab fa-instagram"></i></li>
+                <li class=" col-4  footer__li"><i class="fab fa-facebook"></i></li>
+                <li class=" col-4  footer__li "><i class="far fa-envelope"></i></li>
+            </ul>
+            <p class=" footer text-center text-white">©2021. We love our users!</p>
+        </footer>
+        <!-- JavaScript Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
