--- a/html/servicios.html
+++ b/html/servicios.html
@@ -9,6 +9,9 @@
     <title>SERVICIOS-CONSTRUDREAMS</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../CSS/style.css">
+    <!-- CSS BS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
@@ -23,42 +26,52 @@
 <body>
     <!-- Navegador -->
     <header>
-        <div class="row">
-            <a class="logo">
-                <img class="logo" src="../img/logo.jpg" alt="logo">
-            </a>
-            <nav>
-                <ul class="nav__ul">
-                    <li class="nav__li">
-                        <a class="nav__a" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav__li">
-                        <a class="nav__a" href="servicios.html">Servicios</a>
-                    </li>
-                    <li class="nav__li">
-                        <a class="nav__a" href="casosExito.html">Casos de Exíto</a>
-                    </li>
-                    <li class="nav__li">
-                        <a class="nav__a" href="sobreNosotros.html">Sobre Nosotros</a>
-                    </li>
-                    <li class="nav__li">
-                        <a class="nav__a" href="contactanos.html">Contactanos</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+        <nav class="header navbar navbar-expand-lg shadow navbar-dark fixed-top menu p-2">
+            <div class="container-fluid">
+                <a class="navbar-brand " href="/"><img class="logo" src="../img/logo.jpg" alt="logo" /></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav ">
+                        <li class="nav-item px-lg-2">
+                            <a class="nav__a text-decoration-none text-uppercase " aria-current="page"
+                                href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item px-lg-2">
+                            <a class=" nav__a text-decoration-none text-uppercase " href="servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item px-lg-2 ">
+                            <a class=" nav__a text-decoration-none text-uppercase " href="casosExito.html">Casos de
+                                Exíto</a>
+                        </li>
+                        <li class="nav-item px-lg-2 ">
+                            <a class=" nav__a text-decoration-none text-uppercase " href="sobreNosotros.html">Sobre
+                                Nosotros</a>
+                        </li>
+                        <li class="nav-item px-lg-3 ">
+                            <a class=" nav__a text-decoration-none text-uppercase "
+                                href="contactanos.html">Contactanos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
     <main>
         <!--  Servicios -->
         <section class="container">
             <!-- Titulo de Servicios -->
-            <h1 class="title">¿Que hacemos?</h1>
+            <div class="text-center fs-2 fw-bold pb-5">
+                <h1 class="title">¿Que hacemos?</h1>
+            </div>
             <!-- Informacion Especifica de Servicios  -->
-            <div class="informacion">
-                <article class="row">
-                    <div class="col">
+            <div class="container-fluid">
+                <article class="row align-items-center mb-5">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <h4 class="informacion__h4">Planeación</h4>
-                        <p class="informacion__p">
+                        <p class="pt-3">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
                             necessitatibus dolor, labore alias
                             nesciunt numquam officia iusto aliquam quo assumenda recusandae, quia
@@ -70,14 +83,14 @@
                             tempora.
                         </p>
                     </div>
-                    <div class="col">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <img class="informacion__img" src=" ../img/icono1.png" alt="Planeacion">
                     </div>
                 </article>
-                <article class="row row__reverse">
-                    <div class="col">
+                <article class="row d-flex flex-row-reverse align-items-center mb-5">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <h4 class="informacion__h4">Construcción</h4>
-                        <p class="informacion__p">
+                        <p class="pt-3">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor possimus autem perspiciatis
                             cumque assumenda qui quis eius doloremque sit? Quisquam porro, cupiditate rerum consectetur
                             ullam ad velit eaque voluptatum? Necessitatibus, distinctio, accusamus, harum officiis
@@ -87,14 +100,14 @@
                             Repellat, impedit?
                         </p>
                     </div>
-                    <div class="col">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <img class="informacion__img" src="../img/icono2.png" alt="Construcción">
                     </div>
                 </article>
-                <article class="row ">
-                    <div class="col">
+                <article class="row align-items-center mb-5">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <h4 class="informacion__h4">Diseño de Edificios</h4>
-                        <p class="informacion__p">
+                        <p class="pt-3">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor possimus autem perspiciatis
                             cumque
                             assumenda qui quis eius doloremque sit? Quisquam porro, cupiditate rerum consectetur ullam
@@ -106,14 +119,14 @@
                             impedit?
                         </p>
                     </div>
-                    <div class="col">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <img class="informacion__img" src="../img/icono3.png" alt="Diseño">
                     </div>
                 </article>
-                <article class="row row__reverse">
-                    <div class="col">
+                <article class="row d-flex flex-row-reverse align-items-center mb-5">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <h4 class="informacion__h4">Levantamos Requerimientos</h4>
-                        <p class="informacion__p">
+                        <p class="pt-3">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor possimus autem perspiciatis
                             cumque assumenda qui quis eius doloremque sit? Quisquam porro, cupiditate rerum consectetur
                             ullam ad velit eaque voluptatum? Necessitatibus, distinctio, accusamus, harum officiis
@@ -123,14 +136,14 @@
                             Repellat, impedit?
                         </p>
                     </div>
-                    <div class="col">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <img class="informacion__img" src="../img/icono4.png" alt="Requerimientos">
                     </div>
                 </article>
-                <article class="row">
-                    <div class="col">
+                <article class="row align-items-center mb-5">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <h4 class="informacion__h4">Ubicación</h4>
-                        <p class="informacion__p">
+                        <p class="pt-3">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit tempora placeat, tempore
                             numquam
                             obcaecati non temporibus quo! Sint dolor nobis similique veritatis aliquid quae ad eius,
@@ -139,14 +152,14 @@
                             praesentium quas non incidunt facilis est. Eos ea obcaecati alias. Quaerat, repellendus.
                         </p>
                     </div>
-                    <div class="col">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <img class="informacion__img" src="../img/icono5.png" alt="Ubicación">
                     </div>
                 </article>
-                <article class="row row__reverse">
-                    <div class="col">
+                <article class="row d-flex flex-row-reverse align-items-center mb-5">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <h4 class="informacion__h4">Mano de Obra</h4>
-                        <p class="informacion__p">
+                        <p class="pt-3">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor possimus autem perspiciatis
                             cumque assumenda qui quis eius doloremque sit? Quisquam porro, cupiditate rerum consectetur
                             ullam ad velit eaque voluptatum? Necessitatibus, distinctio, accusamus, harum officiis
@@ -156,7 +169,7 @@
                             Repellat, impedit?
                         </p>
                     </div>
-                    <div class="col">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <img class="informacion__img" src="../img/icono6.png" alt="Obra">
                     </div>
                 </article>
@@ -165,17 +178,21 @@
     </main>
 
     <!-- Footer -->
-    <footer class=" footer">
-        <h3 class=" footer item__h3 footer__h3">
+    <footer class="row footer">
+        <h3 class=" text-center footer__h3">
             Nuestras Redes
         </h3>
-        <ul class="  footer__ul">
-            <li class="footer__li"><i class="fab fa-instagram"></i></li>
-            <li class="footer__li"><i class="fab fa-facebook"></i></li>
-            <li class="footer__li"><i class="far fa-envelope"></i></li>
+        <ul class="row text-center text-decoration-none list-unstyled">
+            <li class=" col-4  footer__li"><i class="fab fa-instagram"></i></li>
+            <li class=" col-4  footer__li"><i class="fab fa-facebook"></i></li>
+            <li class=" col-4  footer__li "><i class="far fa-envelope"></i></li>
         </ul>
-        <p class=" footer footer__ul footer__p">©2021. We love our users!</p>
+        <p class=" footer text-center text-white">©2021. We love our users!</p>
     </footer>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
