--- a/html/contactanos.html
+++ b/html/contactanos.html
@@ -71,22 +71,22 @@
                 <form class="form" action="">
                     <label for="nombre">Nombre:</label>
                     <br />
-                    <input class="form__input col-10 mb-3" type="text" name="nombre" placeholder="Escribe tu nombre ..."
+                    <input class="form__input col-11 mb-3" type="text" name="nombre" placeholder="Escribe tu nombre ..."
                         required />
                     <br />
                     <label for="apellido">Apellido:</label>
                     <br />
-                    <input class="form__input col-10 mb-3" type="text" name="apellido"
+                    <input class="form__input col-11 mb-3" type="text" name="apellido"
                         placeholder="Escribe tu apellido..." required />
                     <br />
                     <label for="email">Email:</label>
                     <br />
-                    <input class="form__input col-10 mb-3" type="email" name="email" placeholder="Escribe tu email..."
+                    <input class="form__input col-11 mb-3" type="email" name="email" placeholder="Escribe tu email..."
                         required />
                     <br />
                     <label for="">Servicios:</label>
                     </br>
-                    <select class="form__select col-10" name="servicios">
+                    <select class="form__select col-11" name="servicios">
                         <option selected>Seleccione un servicio</option>
                         <option value="1">Planeación</option>
                         <option value="2">Contrucción</option>
@@ -98,15 +98,15 @@
                     <br />
                     <label for="mensaje ">Mesaje:</label>
                     <br />
-                    <textarea class="form__input form__mensaje col-10 mb-3" name="mensaje" rows="10"
+                    <textarea class="form__input form__mensaje col-11 mb-3" name="mensaje" rows="10"
                         cols="75"></textarea>
                     <br />
-                    <input class="form__check mb-3" type="checkbox" name="terminos" value="1" required />
+                    <input class="form__check  mb-3" type="checkbox" name="terminos" value="1" required />
                     <label>¿Acepta la politica de privacidad de Contrudreams, asi como los terminos y
                         condiciones?</label>
                     <br />
 
-                    <input class="form__btn" type="submit" value="Enviar">
+                    <input class="col-11  form__btn  text-center my-5" type="submit" value="Enviar">
                 </form>
             </section>
         </main>
