--- a/html/sobreNosotros.html
+++ b/html/sobreNosotros.html
@@ -79,7 +79,7 @@
                             adipisci, molestias
                             officia saepe eius dignissimos.</p>
                     </div>
-                    <div class="col">
+                    <div class="col-xs-12 col-sm-12 col-md-6">
                         <img class="informacion__img" src="../img/sobrenosotros.jpg" alt="Sobre nosotros">
                     </div>
                 </article>
