--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <main>
         <!-- Presentación -->
         <aside>
-            <div class="hero-image col-12 px-0">
+            <div class="hero-image img-fluid col-12 px-0">
                 <h1 class="text-center text-white fw-bold banner__h1">Hacemos realidad tus proyectos de contrucción
                 </h1>
                 <h5 class="text-center fw-light fs-2 baner__h5">
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-6">
-                        <img class="informacion__img" src="img/caso3.jpg">
+                        <img class="informacion__img img-fluid  " src="img/caso3.jpg">
                     </div>
                 </div>
                 <div class=" row d-flex flex-row-reverse align-items-center  mb-5">
@@ -155,7 +155,7 @@
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-6 ">
-                        <img class="informacion__img" src="img/caso2.jpg">
+                        <img class="informacion__img img-fluid" src="img/caso2.jpg">
                     </div>
 
                 </div>
