--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- Presentación -->
         <aside>
             <div class="hero-image img-fluid col-12 px-0">
-                <h1 class="text-center text-white fw-bold banner__h1">Hacemos realidad tus proyectos de contrucción
+                <h1 class="text-center text-white fw-bold banner__h1">Hacemos realidad tus proyectos de construcción
                 </h1>
                 <h5 class="text-center fw-light fs-2 baner__h5">
                     Servicios para toda Colombia
@@ -87,7 +87,7 @@
                     <span id=" icion2">
                         <img class="item__img" src="img/icono2.png">
                     </span>
-                    <h5 class=" baner__h5 mt-5 mb-5 fw-bold">Contrucción</h5>
+                    <h5 class=" baner__h5 mt-5 mb-5 fw-bold">Construcción</h5>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
                     <span id=" icion3">
