--- a/html/casosExito.html
+++ b/html/casosExito.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Titulo -->
     <title>CASOS DE EXÍTO-CONSTRUDREAMS</title>
+    <!-- SEO -->
+    <meta name="description" content="Se presenta los contratos que se realizaron con la empresa en toda colombia">
+    <meta name="keywords" content="EXITOS,CASAS,FINCAS,CONDOMINIOS">
     <!-- CSS -->
     <link rel="stylesheet" href="../CSS/style.css">
     <!-- CSS BS only -->
