--- a/html/contactanos.html
+++ b/html/contactanos.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Titulo -->
     <title>CONTACTO-CONSTRUDREAMS</title>
+    <!-- SEO -->
+    <meta name="description"
+        content="Se presenta una forma de comunicarse con la empresa, en caso de solicitar los servicios">
+    <meta name="keywords" content="CONTACTANOS,CORREO,TELEFONO, SERVICIO">
     <!-- CSS -->
     <link rel="stylesheet" href="../CSS/style.css">
     <!-- CSS BS only -->
