--- a/html/servicios.html
+++ b/html/servicios.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Titulo -->
     <title>SERVICIOS-CONSTRUDREAMS</title>
+    <!-- SEO -->
+    <meta name="description" content="Se presenta los servicios que ofrece la empresa ContruDreams">
+    <meta name="keywords" content=" SERVICIO,DISEÑO,REQUERIMIENTOS,MANO DE OBRA">
     <!-- CSS -->
     <link rel="stylesheet" href="../CSS/style.css">
     <!-- CSS BS only -->
