--- a/html/sobreNosotros.html
+++ b/html/sobreNosotros.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Titulo -->
     <title>SOBRE NOSOTROS-CONSTRUDREAMS</title>
+    <!-- SEO -->
+    <meta name="description" content="Se presenta la cultura de ContruDreams con su vision y mision">
+    <meta name="keywords" content="MISION, VISION, CULTURA , CONSTRUDREAMS">
     <!-- CSS -->
     <link rel="stylesheet" href="../CSS/style.css">
     <!-- CSS BS only -->
