--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Titulo -->
     <title>INICIO-CONSTRUDREAMS</title>
+    <!-- SEO -->
+    <meta name="description"
+        content="Somos una empresa que se dedica en las contrucciones de casas, fincas , entre otros.">
+    <meta name="keywords" content="CONTRUDREAMS, CONTRUCCION, CONTRATOS ">
     <!-- CSS -->
     <link rel="stylesheet" href="CSS/style.css">
     <!-- CSS BS only -->
