--- a/html/casosExito.html
+++ b/html/casosExito.html
@@ -9,7 +9,8 @@
     <title>CASOS DE EXÍTO-CONSTRUDREAMS</title>
     <!-- SEO -->
     <meta name="description" content="Se presenta los contratos que se realizaron con la empresa en toda colombia">
-    <meta name="keywords" content="EXITOS,CASAS,FINCAS,CONDOMINIOS">
+    <meta name="keywords"
+        content="CONTRUDREAMS, CONTRUCCION, CONTRATOS,EXITOS,CASAS,FINCAS,CONDOMINIOS,DISEÑO,REQUERIMIENTOS,MANO DE OBRA">
     <!-- CSS -->
     <link rel="stylesheet" href="../CSS/style.css">
     <!-- CSS BS only -->
