--- a/html/contactanos.html
+++ b/html/contactanos.html
@@ -10,7 +10,8 @@
     <!-- SEO -->
     <meta name="description"
         content="Se presenta una forma de comunicarse con la empresa, en caso de solicitar los servicios">
-    <meta name="keywords" content="CONTACTANOS,CORREO,TELEFONO, SERVICIO">
+    <meta name="keywords"
+        content="CONTRUDREAMS, CONTRUCCION, CONTRATOS,EXITOS,CASAS,FINCAS,CONDOMINIOS,DISEÑO,REQUERIMIENTOS,MANO DE OBRA">
     <!-- CSS -->
     <link rel="stylesheet" href="../CSS/style.css">
     <!-- CSS BS only -->
