--- a/html/servicios.html
+++ b/html/servicios.html
@@ -9,7 +9,8 @@
     <title>SERVICIOS-CONSTRUDREAMS</title>
     <!-- SEO -->
     <meta name="description" content="Se presenta los servicios que ofrece la empresa ContruDreams">
-    <meta name="keywords" content=" SERVICIO,DISEÑO,REQUERIMIENTOS,MANO DE OBRA">
+    <meta name="keywords"
+        content="CONTRUDREAMS, CONTRUCCION, CONTRATOS,EXITOS,CASAS,FINCAS,CONDOMINIOS,DISEÑO,REQUERIMIENTOS,MANO DE OBRA">
     <!-- CSS -->
     <link rel="stylesheet" href="../CSS/style.css">
     <!-- CSS BS only -->
