--- a/html/sobreNosotros.html
+++ b/html/sobreNosotros.html
@@ -9,7 +9,8 @@
     <title>SOBRE NOSOTROS-CONSTRUDREAMS</title>
     <!-- SEO -->
     <meta name="description" content="Se presenta la cultura de ContruDreams con su vision y mision">
-    <meta name="keywords" content="MISION, VISION, CULTURA , CONSTRUDREAMS">
+    <meta name="keywords"
+        content="CONTRUDREAMS, CONTRUCCION, CONTRATOS,EXITOS,CASAS,FINCAS,CONDOMINIOS,DISEÑO,REQUERIMIENTOS,MANO DE OBRA">
     <!-- CSS -->
     <link rel="stylesheet" href="../CSS/style.css">
     <!-- CSS BS only -->
