comentarios de estilos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- SEO -->
     <meta name="description"
         content="Somos una empresa que se dedica en las contrucciones de casas, fincas , entre otros.">
-    <meta name="keywords" content="CONTRUDREAMS, CONTRUCCION, CONTRATOS ">
+    <meta name="keywords" content="CONTRUDREAMS, CONTRUCCION, PRESENTACION ">
     <!-- CSS -->
     <link rel="stylesheet" href="CSS/style.css">
     <!-- CSS BS only -->
