correciones de entrega final

--- a/html/contactanos.html
+++ b/html/contactanos.html
@@ -72,7 +72,7 @@
                     <h1 class="title">Contacto</h1>
                 </div>
                 <!-- Formulario de Contatco  -->
-                <form class="form" action="">
+                <form class="form  row align-items-center" action="">
                     <label for="nombre">Nombre:</label>
                     <br />
                     <input class="form__input col-11 mb-3" type="text" name="nombre" placeholder="Escribe tu nombre ..."
@@ -105,8 +105,8 @@
                     <textarea class="form__input form__mensaje col-11 mb-3" name="mensaje" rows="10"
                         cols="75"></textarea>
                     <br />
-                    <input class="form__check  mb-3" type="checkbox" name="terminos" value="1" required />
-                    <label>¿Acepta la politica de privacidad de Contrudreams, asi como los terminos y
+                    <input class="form__check col-1 p-1 " type="checkbox" name="terminos" value="1" required />
+                    <label class="col-10">¿Acepta la politica de privacidad de Contrudreams, asi como los terminos y
                         condiciones?</label>
                     <br />
 
@@ -116,16 +116,16 @@
         </main>
 
         <!-- Footer -->
-        <footer class="row footer">
+        <footer class="footer">
             <h3 class=" text-center footer__h3">
                 Nuestras Redes
             </h3>
-            <ul class="row text-center text-decoration-none list-unstyled">
+            <ul class=" container-fluid row text-center text-decoration-none list-unstyled">
                 <li class=" col-4  footer__li"><i class="fab fa-instagram"></i></li>
                 <li class=" col-4  footer__li"><i class="fab fa-facebook"></i></li>
                 <li class=" col-4  footer__li "><i class="far fa-envelope"></i></li>
             </ul>
-            <p class=" footer text-center text-white">©2021. We love our users!</p>
+            <p class="text-center text-white">©2021. We love our users!</p>
         </footer>
         <!-- JavaScript Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
