--- a/html/servicios.html
+++ b/html/servicios.html
@@ -66,67 +66,58 @@
         <!--  Servicios -->
         <section class="container">
             <!-- Titulo de Servicios -->
-            <div class="text-center fs-2 fw-bold pb-5">
+            <div class="animatex text-center fs-2 fw-bold pb-5">
                 <h1 class="title">¿Que hacemos?</h1>
             </div>
             <!-- Informacion Especifica de Servicios  -->
             <div class="container-fluid">
-                <article class="row align-items-center mb-5">
+                <article class="animatex row align-items-center mb-5">
                     <div class="col-xs-12 col-sm-12 col-md-6">
                         <h4 class="informacion__h4">Planeación</h4>
                         <p class="pt-3">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
-                            necessitatibus dolor, labore alias
-                            nesciunt numquam officia iusto aliquam quo assumenda recusandae, quia
-                            delectus fugit voluptatum
-                            sit incidunt eos vitae architecto. Sequi, maxime, maiores dolores
-                            eligendi qui consequuntur eum
-                            quasi, esse ut consectetur distinctio accusamus corrupti dolore placeat
-                            temporibus dolorem
-                            tempora.
+                            La planeación de obra se resume en la administración, coordinación y preparación de todos
+                            los recursos que requiere tu
+                            empresa para operar un proyecto: recursos humanos, materiales y financieros agrupándolos
+                            para operar en un tiempo y
+                            costo determinado previamente.Se selecciona lo mejor de cada uno de los recursos para
+                            garantizar el éxito en la obra, de ello
+                            dependerá que el resultado
+                            final sea de calidad.
                         </p>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-6">
                         <img class="informacion__img img-fluid" src=" ../img/icono1.png" alt="Planeacion">
                     </div>
                 </article>
-                <article class="row d-flex flex-row-reverse align-items-center mb-5">
+                <article class="animatex row d-flex flex-row-reverse align-items-center mb-5">
                     <div class="col-xs-12 col-sm-12 col-md-6">
                         <h4 class="informacion__h4">Construcción</h4>
                         <p class="pt-3">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor possimus autem perspiciatis
-                            cumque assumenda qui quis eius doloremque sit? Quisquam porro, cupiditate rerum consectetur
-                            ullam ad velit eaque voluptatum? Necessitatibus, distinctio, accusamus, harum officiis
-                            doloribus
-                            eligendi explicabo sed provident libero fugiat optio delectus magni sit quod quibusdam
-                            nostrum.
-                            Repellat, impedit?
+                            Dependiendo de la planeacion de mano de obra, se hace un proceso que supone el armado de
+                            cualquier cosa, desde cosas consideradas más básicas como ser una casa, edificios,fincas ,
+                            condominios,apartamentos.
                         </p>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-6">
                         <img class="informacion__img img-fluid" src="../img/icono2.png" alt="Construcción">
                     </div>
                 </article>
-                <article class="row align-items-center mb-5">
+                <article class="animatex row align-items-center mb-5">
                     <div class="col-xs-12 col-sm-12 col-md-6">
                         <h4 class="informacion__h4">Diseño de Edificios</h4>
                         <p class="pt-3">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor possimus autem perspiciatis
-                            cumque
-                            assumenda qui quis eius doloremque sit? Quisquam porro, cupiditate rerum consectetur ullam
-                            ad
-                            velit
-                            eaque voluptatum? Necessitatibus, distinctio, accusamus, harum officiis doloribus eligendi
-                            explicabo
-                            sed provident libero fugiat optio delectus magni sit quod quibusdam nostrum. Repellat,
-                            impedit?
+                            Se hace referencia a una amplia base de la arquitectura, la ingeniería, las aplicaciones y
+                            las técnicas para el diseño de
+                            estas construcciones. Todos los proyectos de construcción requieren los servicios de un
+                            diseñador y por lo general de un
+                            arquitecto.
                         </p>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-6">
                         <img class="informacion__img img-fluid" src="../img/icono3.png" alt="Diseño">
                     </div>
                 </article>
-                <article class="row d-flex flex-row-reverse align-items-center mb-5">
+                <article class="animatex row d-flex flex-row-reverse align-items-center mb-5">
                     <div class="col-xs-12 col-sm-12 col-md-6">
                         <h4 class="informacion__h4">Levantamos Requerimientos</h4>
                         <p class="pt-3">
@@ -143,34 +134,26 @@
                         <img class="informacion__img img-fluid" src="../img/icono4.png" alt="Requerimientos">
                     </div>
                 </article>
-                <article class="row align-items-center mb-5">
+                <article class="animatex row align-items-center mb-5">
                     <div class="col-xs-12 col-sm-12 col-md-6">
                         <h4 class="informacion__h4">Ubicación</h4>
                         <p class="pt-3">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit tempora placeat, tempore
-                            numquam
-                            obcaecati non temporibus quo! Sint dolor nobis similique veritatis aliquid quae ad eius,
-                            laudantium
-                            ipsam possimus nostrum perspiciatis architecto sit reiciendis at tempore inventore corrupti
-                            praesentium quas non incidunt facilis est. Eos ea obcaecati alias. Quaerat, repellendus.
+                            La ubicacion no es un impedimento para hacer tus sueños realidad ,esta empresa es
+                            emprededora por lo tanto estamos en toda colombia para los diferentes de proyecto dew
+                            construccion.
                         </p>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-6">
                         <img class="informacion__img img-fluid" src="../img/icono5.png" alt="Ubicación">
                     </div>
                 </article>
-                <article class="row d-flex flex-row-reverse align-items-center mb-5">
+                <article class="animatex row d-flex flex-row-reverse align-items-center mb-5">
                     <div class="col-xs-12 col-sm-12 col-md-6">
                         <h4 class="informacion__h4">Mano de Obra</h4>
                         <p class="pt-3">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor possimus autem perspiciatis
-                            cumque assumenda qui quis eius doloremque sit? Quisquam porro, cupiditate rerum consectetur
-                            ullam ad velit eaque voluptatum? Necessitatibus, distinctio, accusamus, harum officiis
-                            doloribus
-                            eligendi explicabo sed provident libero fugiat optio delectus magni sit quod quibusdam
-                            nostrum.
-                            Repellat, impedit?
-                        </p>
+                            La mano de obra es un componente importante para la conrtruccion, representa un costo en el
+                            proceso de producción, porque si queremos incorporar trabajadores al proceso de producción
+                            se le debe pagar.
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-6">
                         <img class="informacion__img img-fluid" src="../img/icono6.png" alt="Obra">
@@ -181,16 +164,16 @@
     </main>
 
     <!-- Footer -->
-    <footer class="row footer">
+    <footer class="footer">
         <h3 class=" text-center footer__h3">
             Nuestras Redes
         </h3>
-        <ul class="row text-center text-decoration-none list-unstyled">
+        <ul class=" container-fluid row text-center text-decoration-none list-unstyled">
             <li class=" col-4  footer__li"><i class="fab fa-instagram"></i></li>
             <li class=" col-4  footer__li"><i class="fab fa-facebook"></i></li>
             <li class=" col-4  footer__li "><i class="far fa-envelope"></i></li>
         </ul>
-        <p class=" footer text-center text-white">©2021. We love our users!</p>
+        <p class="text-center text-white">©2021. We love our users!</p>
     </footer>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
