--- a/html/casosExito.html
+++ b/html/casosExito.html
@@ -71,7 +71,7 @@
 
             <!-- Informacion Especifica de Casos  -->
             <div class="container-fluid">
-                <article class="row align-items-center mb-5">
+                <article class="animatex row align-items-center mb-5">
                     <div class="col-xs-12 col-sm-12 col-md-6">
                         <h4 class="informacion__h4">Condominios</h4>
                         <p class="pt-3">
@@ -85,7 +85,7 @@
                         <img class="informacion__img img-fluid" src="../img/caso1.jpg" alt="Condominios">
                     </div>
                 </article>
-                <article class="row d-flex flex-row-reverse align-items-center mb-5">
+                <article class="animatex row d-flex flex-row-reverse align-items-center mb-5">
                     <div class="col-xs-12 col-sm-12 col-md-6">
                         <h4 class="informacion__h4">Casas</h4>
                         <p class="p-3">
@@ -99,7 +99,7 @@
                         <img class="informacion__img img-fluid" src="../img/caso2.jpg" alt="Casas">
                     </div>
                 </article>
-                <article class="row align-items-center mb-5">
+                <article class="animatex row align-items-center mb-5">
                     <div class="col-xs-12 col-sm-12 col-md-6">
                         <h4 class="informacion__h4">Fincas</h4>
                         <p class="p-3 ">
@@ -113,7 +113,7 @@
                         <img class="informacion__img img-fluid" src="../img/caso3.jpg" alt="Fincas">
                     </div>
                 </article>
-                <article class="row d-flex flex-row-reverse align-items-center mb-5">
+                <article class="animatexrow d-flex flex-row-reverse align-items-center mb-5">
                     <div class="col-xs-12 col-sm-12 col-md-6">
                         <h4 class="informacion__h4">Apartementos</h4>
                         <p class="pt-3">
@@ -132,17 +132,17 @@
     </main>
 
     <!-- Footer -->
-    <footer class="row footer">
+    <footer class="footer">
         <h3 class=" text-center footer__h3">
             Nuestras Redes
         </h3>
-        <ul class="row text-center text-decoration-none list-unstyled">
+        <ul class=" container-fluid row text-center text-decoration-none list-unstyled">
             <li class=" col-4  footer__li"><i class="fab fa-instagram"></i></li>
             <li class=" col-4  footer__li"><i class="fab fa-facebook"></i></li>
             <li class=" col-4  footer__li "><i class="far fa-envelope"></i></li>
         </ul>
-        <p class=" footer text-center text-white">©2021. We love our users!</p>
-    </footer>
+        <p class="text-center text-white">©2021. We love our users!</p>
+    </footer>>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
