--- a/index.html
+++ b/index.html
@@ -122,19 +122,17 @@
         <!-- Casos de Exito -->
         <section class="container">
             <div>
-                <h3 class="text-center fw-bold p-5 ">CASOS DE EXITO</h3>
-                <div class="row align-items-center mb-5">
-                    <div class="col-xs-12 col-sm-12 col-md-6">
+                <h3 class="animatex text-center fw-bold p-5 ">CASOS DE EXITO</h3>
+                <div class="row animatex align-items-center mb-5">
+                    <div class=" col-xs-12 col-sm-12 col-md-6">
                         <div class="informacion__h4">
                             <h4>Fincas</h4>
                         </div>
                         <div class="pt-3">
                             <p>
-                                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
-                                odit aut fugit, sed quia
-                                consequuntur magni dolores eos qui ratione voluptatem sequi
-                                nesciunt. Neque porro
-                                quisquam est, qui dolorem.
+                                Tenemos un amplia gama de portafilio de nuestro proyectos de contruccion , en este caso
+                                de la fincas la mayor parte esta en el sector Cundinamrca, Colombia. En la ciudad de
+                                Girardot, Chinauta, Pasca, entre otros.
                             </p>
                         </div>
                     </div>
@@ -142,18 +140,15 @@
                         <img class="informacion__img img-fluid  " src="img/caso3.jpg">
                     </div>
                 </div>
-                <div class=" row d-flex flex-row-reverse align-items-center  mb-5">
+                <div class=" row animatex d-flex flex-row-reverse align-items-center  mb-5">
                     <div class="col-xs-12 col-sm-12 col-md-6">
                         <div class="informacion__h4 px-5">
                             <h4>Casas</h4>
                         </div>
                         <div class="pt-3 px-5">
-                            <p>
-                                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
-                                odit aut fugit, sed quia
-                                consequuntur magni dolores eos qui ratione voluptatem sequi
-                                nesciunt. Neque porro
-                                quisquam est, qui dolorem.
+                            Las Casas son un lugar para encontrase en familia , nostros habalamos con nuestros clientes
+                            para hacer esa casa que tanto soñaron con diferentes presupuestos para llegar ese casita que
+                            tanto sueños, trabajamos en toda Colombia.
                             </p>
 
                         </div>
@@ -161,21 +156,21 @@
                     <div class="col-xs-12 col-sm-12 col-md-6 ">
                         <img class="informacion__img img-fluid" src="img/caso2.jpg">
                     </div>
-
                 </div>
+            </div>
         </section>
     </main>
     <!-- Footer -->
-    <footer class="row footer">
+    <footer class="footer">
         <h3 class=" text-center footer__h3">
             Nuestras Redes
         </h3>
-        <ul class="row text-center text-decoration-none list-unstyled">
+        <ul class=" container-fluid row text-center text-decoration-none list-unstyled">
             <li class=" col-4  footer__li"><i class="fab fa-instagram"></i></li>
             <li class=" col-4  footer__li"><i class="fab fa-facebook"></i></li>
             <li class=" col-4  footer__li "><i class="far fa-envelope"></i></li>
         </ul>
-        <p class=" footer text-center text-white">©2021. We love our users!</p>
+        <p class="text-center text-white">©2021. We love our users!</p>
     </footer>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
